--- a/src/client/App.css
+++ b/src/client/App.css
@@ -47,6 +47,22 @@ form {
   gap: 8px;
 }
 
+.like-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  gap: 30px;
+}
+
+.post {
+  background-color: #333333;
+  padding: 8px;
+  width: 90%;
+  border-radius: 3px;
+  box-shadow: 0px 3px 10px rgba(0,0,0,0.8);
+  height: fit-content;
+}
+
 input, textarea, select {
   width: 300px;
   min-height: 30px;
